Enable for tftp_home_dir

--- a/dhcpntftp/templates/dhcpd.conf.j2
+++ b/dhcpntftp/templates/dhcpd.conf.j2
@@ -33,7 +33,7 @@ subnet 192.168.124.0 netmask 255.255.255.0 {
     option broadcast-address 192.168.124.255;
     # specify gateway
     option routers 192.168.124.1;
-    filename "pxelinux/pxelinux.0";
+    filename "pxelinux.0";
 
     next-server 192.168.124.164;
 }
